--- a/articles/active-directory/authentication/TOC.yml
+++ b/articles/active-directory/authentication/TOC.yml
@@ -22,66 +22,64 @@
   items:
     - name: 身份验证方法
       href: concept-authentication-methods.md
-    - name: 无密码身份验证
-      href: concept-authentication-passwordless.md
-    - name: 安全信息注册
-      href: concept-registration-mfa-sspr-combined.md
-    - name: 密码重置
+    - name: 自助式密码重置
       items:
         - name: 密码重置工作原理
           href: concept-sspr-howitworks.md
-        - name: 密码重置选项
-          href: concept-sspr-customization.md
-        - name: 密码重置策略
-          href: concept-sspr-policy.md
-        - name: 需要哪个许可证？
-          href: concept-sspr-licensing.md
         - name: 本地集成
           href: concept-sspr-writeback.md
+        - name: 策略
+          href: concept-sspr-policy.md
+        - name: 许可证
+          href: concept-sspr-licensing.md
     - name: 多重身份验证
       items:
         - name: MFA 工作原理
           href: concept-mfa-howitworks.md
-        - name: 为用户授予许可
-          href: concept-mfa-licensing.md
-        - name: 管理身份验证提供程序
-          href: concept-mfa-authprovider.md
-        - name: 安全指南
-          href: multi-factor-authentication-security-best-practices.md
         - name: 数据驻留
           href: concept-mfa-data-residency.md
+        - name: 许可证
+          href: concept-mfa-licensing.md
         - name: 用于 Office 365 的 MFA
           href: 'https://docs.microsoft.com/office365/admin/security-and-compliance/set-up-multi-factor-authentication?view=o365-worldwide'
-        - name: MFA 常见问题解答
+        - name: 常见问题解答
           href: multi-factor-authentication-faq.md
-    - name: Azure AD 密码保护
+    - name: 无密码身份验证
+      href: concept-authentication-passwordless.md
+    - name: 密码保护
       items:
         - name: 在云中消除弱密码
           href: concept-password-ban-bad.md
         - name: 在本地消除弱密码
           href: concept-password-ban-bad-on-premises.md
+    - name: 安全信息注册
+      href: concept-registration-mfa-sspr-combined.md
     - name: 可复原的访问控制
       href: concept-resilient-controls.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 自助式密码重置
       items:
         - name: 部署指南
           href: howto-sspr-deployment.md
+        - name: 用户自定义选项
+          href: howto-sspr-customization.md
         - name: 预注册身份验证数据
           href: howto-sspr-authenticationdata.md
         - name: 用于 Windows 客户端的 SSPR
           href: howto-sspr-windows.md
-    - name: 基于云的 MFA
+    - name: Azure 多重身份验证
       items:
         - name: 部署指南
           href: howto-mfa-getstarted.md
-        - name: 每用户 MFA
-          href: howto-mfa-userstates.md
-        - name: 用户和设备设置
-          href: howto-mfa-userdevicesettings.md
         - name: 配置设置
           href: howto-mfa-mfasettings.md
+        - name: 配置用户
+          href: howto-mfa-userdevicesettings.md
+        - name: 启用每用户 MFA
+          href: howto-mfa-userstates.md
+        - name: 配置身份验证提供程序
+          href: concept-mfa-authprovider.md
         - name: Directory 联合身份验证
           items:
             - name: Windows Server 2016 AD FS 适配器
@@ -102,28 +100,6 @@
               href: howto-mfa-nps-extension-rdg.md
             - name: VPN
               href: howto-mfa-nps-extension-vpn.md
-    - name: 安全信息注册
-      items:
-        - name: 启用合并注册
-          href: howto-registration-mfa-sspr-combined.md
-        - name: 排查合并注册问题
-          href: howto-registration-mfa-sspr-combined-troubleshoot.md
-    - name: Azure AD 密码保护
-      items:
-        - name: 在本地规划和部署
-          href: howto-password-ban-bad-on-premises-deploy.md
-        - name: 在本地启用和配置
-          href: howto-password-ban-bad-on-premises-operations.md
-        - name: 监视本地部署
-          href: howto-password-ban-bad-on-premises-monitor.md
-        - name: 排查本地部署问题
-          href: howto-password-ban-bad-on-premises-troubleshoot.md
-        - name: 本地 Azure AD 密码保护常见问题解答
-          href: howto-password-ban-bad-on-premises-faq.md
-        - name: 本地代理版本历史记录
-          href: howto-password-ban-bad-on-premises-agent-versions.md
-    - name: Azure AD 智能锁定
-      href: howto-password-smart-lockout.md
     - name: 无密码
       items:
         - name: 部署无密码
@@ -140,14 +116,38 @@
           href: howto-authentication-passwordless-phone.md
         - name: Windows Hello for Business
           href: 'https://docs.microsoft.com/windows/security/identity-protection/hello-for-business/hello-identity-verification'
+    - name: 安全信息注册
+      items:
+        - name: 启用合并注册
+          href: howto-registration-mfa-sspr-combined.md
+        - name: 排查合并注册问题
+          href: howto-registration-mfa-sspr-combined-troubleshoot.md
+    - name: 本地密码保护
+      items:
+        - name: 规划和部署
+          href: howto-password-ban-bad-on-premises-deploy.md
+        - name: 启用和配置
+          href: howto-password-ban-bad-on-premises-operations.md
+        - name: 监视
+          href: howto-password-ban-bad-on-premises-monitor.md
+        - name: 疑难解答
+          href: howto-password-ban-bad-on-premises-troubleshoot.md
+        - name: 常见问题解答
+          href: howto-password-ban-bad-on-premises-faq.md
+        - name: 代理版本历史记录
+          href: howto-password-ban-bad-on-premises-agent-versions.md
+    - name: 使用基于 SMS 的身份验证（预览版）
+      href: howto-authentication-sms-signin.md
+    - name: Azure AD 智能锁定
+      href: howto-password-smart-lockout.md
     - name: 基于证书的身份验证
       items:
         - name: 开始使用证书身份验证
           href: active-directory-certificate-based-authentication-get-started.md
           items:
-            - name: Android 设备上的 CBA
+            - name: 在 Android 设备上使用
               href: active-directory-certificate-based-authentication-android.md
-            - name: iOS 设备上的 CBA
+            - name: 在 iOS 设备上使用
               href: active-directory-certificate-based-authentication-ios.md
     - name: 报表
       items:
@@ -199,7 +199,7 @@
               href: howto-mfaserver-nps-vpn.md
             - name: NPS 扩展错误
               href: howto-mfa-nps-extension-errors.md
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 对 SSPR 进行故障排除
           href: active-directory-passwords-troubleshoot.md
