--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -7,8 +7,8 @@
       items:
         - name: '10,000ft Plans'
           href: 10000ftplans-tutorial.md
-        - name: 123ContactForm
-          href: 123contactform-tutorial.md
+        - name: 123FormBuilder
+          href: 123formbuilder-tutorial.md
         - name: 15Five
           href: 15five-tutorial.md
         - name: 23 Video
@@ -47,8 +47,6 @@
           href: adobe-creative-cloud-tutorial.md
         - name: Adobe Experience Manager
           href: adobeexperiencemanager-tutorial.md
-        - name: Adobe Identity Management
-          href: adobe-identity-management-tutorial.md
         - name: Adobe Sign
           href: adobe-echosign-tutorial.md
         - name: Adoddle cSaas Platform
@@ -81,7 +79,7 @@
           href: amazon-business-tutorial.md
         - name: Amazon Web Services (AWS)
           href: amazon-web-service-tutorial.md
-        - name: Amazon Web Services (AWS)（旧版教程）
+        - name: 可连接多个帐户的 Amazon Web Services (AWS)
           href: aws-multi-accounts-tutorial.md
         - name: AMMS
           href: amms-tutorial.md
@@ -569,6 +567,8 @@
           href: foreseecxsuite-tutorial.md
         - name: Form.com
           href: formcom-tutorial.md
+        - name: Fortes Change Cloud
+          href: fortes-change-cloud-tutorial.md
         - name: Freedcamp
           href: freedcamp-tutorial.md
         - name: FreshDesk
@@ -611,6 +611,8 @@
           href: golinks-tutorial.md
         - name: GoToMeeting
           href: citrix-gotomeeting-tutorial.md
+        - name: gr8 People
+          href: gr8-people-tutorial.md
         - name: Gra-Pe
           href: grape-tutorial.md
         - name: Greenhouse
@@ -635,6 +637,8 @@
           href: halosys-tutorial.md
         - name: HappyFox
           href: happyfox-tutorial.md
+        - name: Harmony
+          href: harmony-tutorial.md
         - name: Harness
           href: harness-tutorial.md
         - name: Helper Helper
@@ -651,6 +655,8 @@
           href: heybuddy-tutorial.md
         - name: HighGear
           href: highgear-tutorial.md
+        - name: HighGround
+          href: highground-tutorial.md
         - name: Hightail
           href: hightail-tutorial.md
         - name: HireVue
@@ -883,6 +889,8 @@
           href: lift-tutorial.md
         - name: LINE WORKS
           href: worksmobile-tutorial.md
+        - name: Litmus
+          href: litmus-tutorial.md
         - name: Learnster
           href: learnster-tutorial.md
         - name: LinkedIn Elevate
@@ -901,7 +909,7 @@
           href: logicmonitor-tutorial.md
         - name: LoginRadius
           href: lr-tutorial.md
-        - name: Logz.io - Cloud Observability for Engineers
+        - name: Logz.io - Azure AD 集成
           href: logzio-cloud-observability-for-engineers-tutorial.md
         - name: Lucidchart
           href: lucidchart-tutorial.md
@@ -1109,6 +1117,8 @@
           href: peakon-tutorial.md
         - name: Pega Systems
           href: pegasystems-tutorial.md
+        - name: Pendo
+          href: pendo-tutorial.md
         - name: 人员
           href: people-tutorial.md
         - name: Peoplecart
@@ -1435,6 +1445,8 @@
           href: surveymonkey-enterprise-tutorial.md
         - name: Symantec Web Security Service (WSS)
           href: symantec-tutorial.md
+        - name: SynchroNet CLICK
+          href: synchronet-click-tutorial.md
         - name: Syncplicity
           href: syncplicity-tutorial.md
         - name: Synergi
@@ -1499,6 +1511,8 @@
           href: timelive-tutorial.md
         - name: TimeOffManager
           href: timeoffmanager-tutorial.md
+        - name: Timetabling Solutions
+          href: timetabling-solutions-tutorial.md
         - name: TINFOIL SECURITY
           href: tinfoil-security-tutorial.md
         - name: TiViTz
@@ -1517,6 +1531,8 @@
           href: trakstar-tutorial.md
         - name: Trello
           href: trello-tutorial.md
+        - name: Trend Micro Web Security (TMWS)
+          href: trend-micro-tutorial.md
         - name: TripActions
           href: tripactions-tutorial.md
         - name: Trisotech Digital Enterprise Server
@@ -1806,6 +1822,8 @@
           href: netsuite-provisioning-tutorial.md
         - name: OfficeSpace Software
           href: officespace-software-provisioning-tutorial.md
+        - name: Oracle Cloud Infrastructure Console
+          href: oracle-cloud-infratstructure-console-provisioning-tutorial.md
         - name: Oracle Fusion ERP
           href: oracle-fusion-erp-provisioning-tutorial.md
         - name: Pingboard
