--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -581,6 +581,8 @@
       items:
         - name: 从 SSDT 运行 Azure 中的 SSIS 包
           href: how-to-invoke-ssis-package-ssdt.md
+        - name: 使用 Azure SQL 托管实例代理运行 SSIS 包
+          href: how-to-invoke-ssis-package-managed-instance-agent.md
         - name: 使用 Azure 支持的 dtexec 实用工具运行 SSIS 包
           href: how-to-invoke-ssis-package-azure-enabled-dtexec.md
         - name: 使用“执行 SSIS 包”活动运行 SSIS 包
