--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -15,23 +15,23 @@
   items:
     - name: 存储事件
       items:
+        - name: 门户
+          href: blob-event-quickstart-portal.md
         - name: Azure CLI
           href: ../storage/blobs/storage-blob-event-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
         - name: Azure PowerShell
           href: ../storage/blobs/storage-blob-event-quickstart-powershell.md?toc=%2fazure%2fevent-grid%2ftoc.json
-        - name: 门户
-          href: blob-event-quickstart-portal.md
         - name: ARM 模板
           displayName: Resource Manager
           href: blob-event-quickstart-template.md
     - name: 自定义事件
       items:
+        - name: 门户
+          href: custom-event-quickstart-portal.md
         - name: Azure CLI
           href: custom-event-quickstart.md
         - name: PowerShell
           href: custom-event-quickstart-powershell.md
-        - name: 门户
-          href: custom-event-quickstart-portal.md
     - name: 作为事件处理程序的 Azure Functions
       href: custom-event-to-function.md
     - name: 充当事件处理程序的队列存储
@@ -96,10 +96,63 @@
       href: 'https://docs.microsoft.com/samples/browse/?term=Event%20Grid'
 - name: 概念
   items:
-    - name: 事件网格概念
+    - name: 事件网格术语
       href: concepts.md
+    - name: 自定义主题
+      href: custom-topics.md
     - name: 系统主题
-      href: system-topics.md
+      items:
+        - name: 系统主题概述
+          href: system-topics.md
+        - name: 事件源
+          items:
+            - name: Azure 应用配置
+              href: event-schema-app-configuration.md
+            - name: Azure Blob 存储
+              href: event-schema-blob-storage.md
+            - name: Azure 容器注册表
+              href: event-schema-container-registry.md
+            - name: Azure 事件中心
+              href: event-schema-event-hubs.md
+            - name: Azure IoT 中心
+              href: event-schema-iot-hub.md
+            - name: Azure Key Vault
+              href: event-schema-key-vault.md
+            - name: Azure 机器学习
+              href: event-schema-machine-learning.md
+            - name: Azure Maps
+              href: event-schema-azure-maps.md
+            - name: Azure 媒体服务
+              href: event-schema-media-services.md
+            - name: Azure 资源组
+              href: event-schema-resource-groups.md
+            - name: Azure 服务总线
+              href: event-schema-service-bus.md
+            - name: Azure SignalR
+              href: event-schema-azure-signalr.md
+            - name: Azure 订阅
+              href: event-schema-subscriptions.md
+    - name: 事件域
+      href: event-domains.md
+    - name: 事件架构格式
+      items:
+        - name: 事件网格事件架构
+          href: event-schema.md
+        - name: 云事件架构
+          href: cloud-event-schema.md
+    - name: 事件处理程序
+      displayName: 'Azure Automation, Functions, Event Hubs, Hybrid Connections, Logic Apps, Service Bus, Queue Storage, Webhooks'
+      href: event-handlers.md
+    - name: 事件传送
+      items:
+        - name: 事件筛选
+          href: event-filtering.md
+        - name: 传递和重试
+          href: delivery-and-retry.md
+    - name: 灾难恢复
+      items:
+        - name: 异地灾难恢复
+          href: geo-disaster-recovery.md
     - name: 安全性
       items:
         - name: 身份验证
@@ -108,21 +161,7 @@
           href: security-authorization.md
         - name: 网络安全
           href: network-security.md
-    - name: 传递和重试
-      href: delivery-and-retry.md
-    - name: 事件筛选
-      href: event-filtering.md
-    - name: 事件域
-      href: event-domains.md
-    - name: 事件源
-      displayName: 'Azure subscriptions, Container registry, Custom topics, Event Hubs, IoT Hub, Key Vault, Media Services, Resource groups, Service Bus, Storage, Maps, App Configuration, Signal R, Machine Learning'
-      href: event-sources.md
-    - name: 事件处理程序
-      displayName: 'Azure Automation, Functions, Event Hubs, Hybrid Connections, Logic Apps, Service Bus, Queue Storage, Webhooks'
-      href: event-handlers.md
-    - name: 异地灾难恢复
-      href: geo-disaster-recovery.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 配置专用终结点（预览版）
       href: configure-private-endpoints.md
@@ -140,8 +179,6 @@
       href: manage-event-delivery.md
     - name: 筛选事件
       href: how-to-filter-events.md
-    - name: 监视事件传送
-      href: monitor-event-delivery.md
     - name: 查询事件订阅
       href: query-event-subscriptions.md
     - name: 通过门户进行订阅
@@ -154,10 +191,14 @@
       href: how-to-event-domains.md
     - name: 实现客户端故障转移
       href: custom-disaster-recovery.md
-    - name: 排查错误
-      href: troubleshoot-errors.md
-    - name: 为主题启用诊断日志
-      href: enable-diagnostic-logs-topic.md
+    - name: 疑难解答
+      items:
+        - name: 为主题启用诊断日志
+          href: enable-diagnostic-logs-topic.md
+        - name: 排查错误
+          href: troubleshoot-errors.md
+        - name: 监视事件传送
+          href: monitor-event-delivery.md
 - name: 参考
   items:
     - name: Azure CLI
@@ -176,35 +217,6 @@
       href: /javascript/api/overview/azure/eventgrid
     - name: 订阅架构
       href: subscription-creation-schema.md
-    - name: 事件架构
-      href: event-schema.md
-      items:
-        - name: Azure 订阅
-          href: event-schema-subscriptions.md
-        - name: Blob 存储
-          href: event-schema-blob-storage.md
-        - name: 容器注册表
-          href: event-schema-container-registry.md
-        - name: 事件中心
-          href: event-schema-event-hubs.md
-        - name: IoT 中心
-          href: event-schema-iot-hub.md
-        - name: Key Vault
-          href: event-schema-key-vault.md
-        - name: 媒体服务
-          href: ../media-services/latest/media-services-event-schemas.md?toc=%2fazure%2fevent-grid%2ftoc.json
-        - name: 资源组
-          href: event-schema-resource-groups.md
-        - name: 服务总线
-          href: event-schema-service-bus.md
-        - name: Azure Maps
-          href: event-schema-azure-maps.md
-        - name: 应用配置
-          href: event-schema-app-configuration.md
-        - name: Azure SignalR
-          href: event-schema-azure-signalr.md
-        - name: Azure 机器学习
-          href: event-schema-machine-learning.md
     - name: 模板资源
       items:
         - name: 事件订阅
