--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -98,6 +98,8 @@
         - name: 功能
           href: luis-concept-feature.md
           displayName: 'descriptor, phrase list'
+        - name: 在运行时扩展应用
+          href: schema-change-prediction-runtime.md
     - name: 预测分数
       href: luis-concept-prediction-score.md
     - name: 最佳做法
@@ -394,7 +396,7 @@
       href: 'https://github.com/Azure-Samples/cognitive-services-language-understanding'
     - name: 区域可用性
       href: 'https://azure.microsoft.com/global-infrastructure/services/?products=cognitive-services'
-    - name: 语言和区域支持
+    - name: 语言支持
       href: luis-language-support.md
       displayName: 'phrase list recommendations, multi-language, translator, locale, language, English, Chinese, Dutch, French, German, Italian, Japanese, Korean, Portuguese, Spanish, Turkish, Keigo, informal Japanese, subculture, dictation, speech, Bing Spell Check, foreign words, Hybrid languages, Tokenization, space, special character, compound words, tokens'
     - name: Azure 路线图
