--- a/articles/key-vault/index.yml
+++ b/articles/key-vault/index.yml
@@ -1,96 +1,102 @@
-### YamlMime:Landing
-title: Azure Key Vault 文档
+### YamlMime:Hub
+title: Azure Key Vault
 summary: 了解如何使用密钥保管库来创建及维护用于访问和加密云资源、应用和解决方案的密钥。 教程、API 参考和其他资源。
+brand: azure
 metadata:
   title: Azure Key Vault 文档
   description: 了解如何使用密钥保管库来创建及维护用于访问和加密云资源、应用和解决方案的密钥。 教程、API 参考和其他资源。
   services: key-vault
   ms.service: key-vault
-  ms.topic: landing-page
+  ms.subservice: na
+  ms.topic: hub-page
+  ms.collection: na
   author: msmbaldwin
   ms.author: mbaldwin
-  manager: rkarlin
-  ms.date: 09/19/2019
-  ms.openlocfilehash: cbd1ca9ead64bfda8401876ec54487f767363d3c
-  ms.sourcegitcommit: 0947111b263015136bca0e6ec5a8c570b3f700ff
+  ms.date: 04/07/2020
+  ms.openlocfilehash: e969d71be3c8f77607e69205c24d6c980c9943a2
+  ms.sourcegitcommit: 31ef5e4d21aa889756fa72b857ca173db727f2c3
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/24/2020
-  ms.locfileid: "71299772"
-landingContent:
-- title: 关于 Azure Key Vault
-  linkLists:
-  - linkListType: overview
+  ms.lasthandoff: 04/16/2020
+  ms.locfileid: "81536261"
+highlightedContent:
+  items:
+  - title: Azure Key Vault 简介
+    itemType: overview
+    url: ./general/overview.md
+  - title: 基本概念
+    itemType: overview
+    url: ./general/basic-concepts.md
+  - title: 软删除
+    itemType: overview
+    url: ./general/overview-soft-delete.md
+  - title: 日志记录
+    itemType: overview
+    url: ./general/logging.md
+  - title: 限制
+    itemType: overview
+    url: ./general/overview-throttling.md
+  - title: 安全建议
+    itemType: overview
+    url: ./general/security-recommendations.md
+conceptualContent:
+  items:
+  - title: 证书
     links:
-    - text: 什么是 Azure Key Vault？
-      url: key-vault-overview.md
-  - linkListType: concept
+    - url: ./certificates/about-certificates.md
+      itemType: overview
+      text: 关于证书
+    - url: ./certificates/quick-create-portal.md
+      itemType: quickstart
+      text: 使用 Azure 门户在 Azure Key Vault 中设置和检索证书
+    - url: ./certificates/certificate-scenarios.md
+      itemType: overview
+      text: Key Vault 证书入门
+    - url: ./certificates/create-certificate-scenarios.md
+      itemType: overview
+      text: 监视和管理证书创建
+    footerLink:
+      url: ./certificates/index.yml
+      text: 查看详细信息
+  - title: 键
     links:
-    - text: 基本概念
-      url: basic-concepts.md
-    - text: 软删除
-      url: key-vault-ovw-soft-delete.md
-    - text: 限制
-      url: key-vault-ovw-throttling.md
-- title: 入门
-  linkLists:
-  - linkListType: quickstart
+    - url: ./keys/about-keys.md
+      itemType: overview
+      text: 关于密钥
+    - url: ./keys/quick-create-portal.md
+      itemType: quickstart
+      text: 使用 Azure 门户在 Azure Key Vault 中设置和检索密钥
+    - url: ./keys/hsm-protected-keys.md
+      itemType: tutorial
+      text: 将 HSM 保护的密钥导入 Key Vault
+    - url: ./keys/hsm-protected-keys-vendor-agnostic-byok.md
+      itemType: overview
+      text: 导入与供应商无关的受 HSM 保护的密钥
+    footerLink:
+      url: ./keys/index.yml
+      text: 查看详细信息
+  - title: 机密
     links:
-    - text: Azure CLI
-      url: quick-create-cli.md
-    - text: Azure PowerShell
-      url: quick-create-powershell.md
-    - text: 门户
-      url: quick-create-portal.md
-    - text: .NET
-      url: quick-create-net.md
-    - text: Node.js
-      url: quick-create-node.md
-- title: 教程
-  linkLists:
-  - linkListType: tutorial
+    - url: ./secrets/about-secrets.md
+      itemType: overview
+      text: 关于机密
+    - url: ./secrets/quick-create-portal.md
+      itemType: quickstart
+      text: 使用 Azure 门户在 Azure Key Vault 中设置和检索机密
+    - url: ./secrets/tutorial-rotation.md
+      itemType: tutorial
+      text: 为单用户资源轮换机密
+    footerLink:
+      url: ./secrets/index.yml
+      text: 查看详细信息
+  - title: 管理存储密钥
     links:
-    - text: 从 Web 应用程序使用 Key Vault
-      url: tutorial-net-create-vault-azure-web-app.md
-    - text: 将 Key Vault 与 Azure Linux 虚拟机配合使用
-      url: tutorial-net-linux-virtual-machine.md
-    - text: 将 Key Vault 与 Azure Windows 虚拟机配合使用
-      url: tutorial-net-windows-virtual-machine.md
-    - text: 通过 Python 使用 Key Vault - Linux
-      url: tutorial-python-linux-virtual-machine.md
-    - text: 通过 Python 使用 Key Vault - Windows
-      url: tutorial-python-windows-virtual-machine.md
-- title: Key Vault 和存储密钥
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: 通过 Azure CLI 管理存储密钥
-      url: key-vault-ovw-storage-keys.md
-    - text: 通过 Azure PowerShell 管理存储密钥
-      url: key-vault-overview-storage-keys-powershell.md
-    - text: 在代码中提取 SAS 令牌
-      url: storage-keys-sas-tokens-code.md
-- title: Key Vault 应用集成
-  linkLists:
-  - linkListType: overview
-    links:
-    - text: 开发人员指南
-      url: key-vault-developers-guide.md
-    - text: 使用托管标识访问 Key Vault
-      url: managed-identity.md
-  - linkListType: tutorial
-    links:
-    - text: 将 Key Vault 与 .NET Azure Web 应用配合使用
-      url: tutorial-net-create-vault-azure-web-app.md
-  - linkListType: reference
-    links:
-    - text: 身份验证、请求和响应
-      url: authentication-requests-and-responses.md
-    - text: Key Vault REST API 参考
-      url: /rest/api/keyvault/
-- title: Microsoft Learn
-  linkLists:
-  - linkListType: learn
-    links:
-    - text: 使用 Azure Key Vault 管理服务器应用中的机密
-      url: /learn/modules/manage-secrets-with-azure-key-vault/
+    - url: ./secrets/overview-storage-keys.md
+      itemType: overview
+      text: 存储密钥 - CLI
+    - url: ./secrets/overview-storage-keys-powershell.md
+      itemType: overview
+      text: 存储密钥 - PowerShell
+    - url: ./secrets/storage-keys-sas-tokens-code.md
+      itemType: overview
+      text: 在代码中提取 SAS 令牌
