--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -133,6 +133,8 @@
           href: service-fabric-cluster-security.md
         - name: 内置安全控件
           href: service-fabric-security-controls.md
+        - name: Service Fabric 中基于证书的身份验证
+          href: cluster-security-certificates.md
     - name: 术语
       href: service-fabric-technical-overview.md
     - name: 构建应用程序
@@ -145,6 +147,8 @@
               href: service-fabric-containers-overview.md
             - name: Docker Compose（预览）
               href: service-fabric-docker-compose.md
+            - name: 探测
+              href: probes-codepackage.md
         - name: Reliable Services
           items:
             - name: Reliable Services 概述
@@ -264,6 +268,10 @@
               href: service-fabric-backup-restore-service-trigger-restore.md
             - name: 按需备份分区
               href: service-fabric-backup-restore-service-ondemand-backup.md
+        - name: Initializer CodePackage
+          href: initializer-codepackages.md
+        - name: RunToCompletion
+          href: run-to-completion.md
     - name: 群集
       items:
         - name: 群集概述
@@ -316,6 +324,8 @@
               href: service-fabric-cluster-resource-manager-defragmentation-metrics.md
             - name: 均衡群集
               href: service-fabric-cluster-resource-manager-balancing.md
+            - name: 子群集
+              href: cluster-resource-manager-subclustering.md
             - name: 限制
               href: service-fabric-cluster-resource-manager-advanced-throttling.md
             - name: 服务移动
@@ -354,7 +364,7 @@
       href: service-fabric-api-management-overview.md
     - name: 应用资源模型
       href: service-fabric-concept-resource-model.md
-    - name: 托管标识（预览版）
+    - name: 托管标识
       href: concepts-managed-identity.md
     - name: 配置容器存储库凭据
       href: configure-container-repository-credentials.md
@@ -751,7 +761,7 @@
           href: service-fabric-reverse-proxy-diagnostics.md
         - name: 对本地群集进行故障排除
           href: service-fabric-troubleshoot-local-cluster-setup.md
-    - name: 将托管标识用于 Service Fabric 应用（预览版）
+    - name: 将托管标识用于 Service Fabric 应用
       items:
         - name: 群集设置
           items:
