commit translated contents

--- a/articles/active-directory/users-groups-roles/TOC.yml
+++ b/articles/active-directory/users-groups-roles/TOC.yml
@@ -18,7 +18,7 @@
       href: groups-quickstart-naming-policy.md
 - name: 教程
   items:
-    - name: 创建动态填充的组
+    - name: 创建动态组
       href: groups-dynamic-tutorial.md
 - name: 概念
   expanded: true
@@ -40,21 +40,23 @@
       items:
         - name: 创建用户
           href: /azure/active-directory/fundamentals/add-users-azure-active-directory?context=azure/active-directory/users-groups-roles/context/ugr-context
-        - name: 批量创建用户（预览版）
+        - name: 批量创建用户
           href: users-bulk-add.md
         - name: 管理用户个人资料
           href: /azure/active-directory/fundamentals/active-directory-users-profile-azure-portal?context=azure/active-directory/users-groups-roles/context/ugr-context
-        - name: 下载用户信息（预览版）
+        - name: “我的员工”委托
+          href: my-staff-configure.md
+        - name: 下载用户信息
           href: users-bulk-download.md
         - name: 共享用户帐户
           href: users-sharing-accounts.md
         - name: 将用户分配到管理员角色
           href: /azure/active-directory/fundamentals/active-directory-users-assign-role-azure-portal?context=azure/active-directory/users-groups-roles/context/ugr-context
-        - name: 批量删除用户（预览版）
+        - name: 批量删除用户
           href: users-bulk-delete.md
         - name: 还原已删除的用户
           href: /azure/active-directory/fundamentals/active-directory-users-restore?context=azure/active-directory/users-groups-roles/context/ugr-context
-        - name: 批量还原用户（预览版）
+        - name: 批量还原用户
           href: users-bulk-restore.md
         - name: 关闭非托管目录下的帐户
           href: users-close-account.md
@@ -82,42 +84,18 @@
           href: /azure/active-directory/connect/active-directory-aadconnect?context=azure/active-directory/users-groups-roles/context/ugr-context
     - name: 管理组
       items:
-        - name: 搜索组和成员列表（预览版）
-          href: groups-members-owners-search.md
+        - name: 使用 Azure AD 组管理访问权限
+          href: /azure/active-directory/fundamentals/active-directory-manage-groups?context=azure/active-directory/users-groups-roles/context/ugr-context
         - name: 创建组（Azure 门户）
           href: /azure/active-directory/fundamentals/active-directory-groups-create-azure-portal?context=azure/active-directory/users-groups-roles/context/ugr-context
-        - name: 分配敏感度标签（预览版）
-          href: groups-assign-sensitivity-labels.md
         - name: 管理组 - 用于 Graph 的 PowerShell (v2)
           href: groups-settings-v2-cmdlets.md
-        - name: 管理组 - PowerShell MSOnline
+        - name: 使用 PowerShell MSOnline 管理组
           href: groups-settings-cmdlets.md
+        - name: 搜索组和成员列表
+          href: groups-members-owners-search.md
         - name: 添加或删除组成员
           href: /azure/active-directory/fundamentals/active-directory-groups-members-azure-portal?context=azure/active-directory/users-groups-roles/context/ugr-context
-        - name: 批量添加成员（预览版）
-          href: groups-bulk-import-members.md
-        - name: 批量删除成员（预览版）
-          href: groups-bulk-remove-members.md
-        - name: 批量下载成员列表（预览版）
-          href: groups-bulk-download-members.md
-        - name: 管理组所有者
-          href: /azure/active-directory/fundamentals/active-directory-accessmanagement-managing-group-owners?context=azure/active-directory/users-groups-roles/context/ugr-context
-        - name: 批量下载组列表（预览版）
-          href: groups-bulk-download.md
-        - name: 管理组中的组
-          href: /azure/active-directory/fundamentals/active-directory-groups-membership-azure-portal?context=azure/active-directory/users-groups-roles/context/ugr-context
-        - name: 添加对 SaaS 应用的组访问权限
-          href: groups-saasapps.md
-        - name: 组命名引用
-          href: groups-naming-policy.md
-        - name: 组过期引用
-          href: groups-lifecycle.md
-        - name: 还原已删除的组
-          href: groups-restore-deleted.md
-        - name: 管理组设置
-          href: /azure/active-directory/fundamentals/active-directory-groups-settings-azure-portal?context=azure/active-directory/users-groups-roles/context/ugr-context
-        - name: 设置组自助服务
-          href: groups-self-service-management.md
         - name: 动态组
           items:
             - name: 创建动态组
@@ -128,6 +106,32 @@
               href: groups-dynamic-rule-validation.md
             - name: 更改组成员身份类型
               href: groups-change-type.md
+        - name: 批量添加成员
+          href: groups-bulk-import-members.md
+        - name: 批量删除成员
+          href: groups-bulk-remove-members.md
+        - name: 批量下载成员列表
+          href: groups-bulk-download-members.md
+        - name: 批量下载组列表
+          href: groups-bulk-download.md
+        - name: 还原已删除的组
+          href: groups-restore-deleted.md
+        - name: 管理组设置
+          href: /azure/active-directory/fundamentals/active-directory-groups-settings-azure-portal?context=azure/active-directory/users-groups-roles/context/ugr-context
+        - name: 管理组所有者
+          href: /azure/active-directory/fundamentals/active-directory-accessmanagement-managing-group-owners?context=azure/active-directory/users-groups-roles/context/ugr-context
+        - name: 管理组中的组
+          href: /azure/active-directory/fundamentals/active-directory-groups-membership-azure-portal?context=azure/active-directory/users-groups-roles/context/ugr-context
+        - name: 添加对 SaaS 应用的组访问权限
+          href: groups-saasapps.md
+        - name: 设置组命名策略
+          href: groups-naming-policy.md
+        - name: 设置组过期策略
+          href: groups-lifecycle.md
+        - name: 设置组自助服务
+          href: groups-self-service-management.md
+        - name: 分配敏感度标签
+          href: groups-assign-sensitivity-labels.md
     - name: 分配许可证
       items:
         - name: 将许可证分配给组
@@ -145,14 +149,15 @@
         - name: 用于许可的服务计划 ID
           href: licensing-service-plan-reference.md
     - name: Azure AD 管理员角色
+      expanded: true
       items:
         - name: 角色和权限
           href: directory-assign-admin-roles.md
         - name: 查看和分配角色
           href: directory-manage-roles-portal.md
-        - name: 自定义角色预览版
+        - name: 自定义角色
           items:
-            - name: 自定义角色预览版
+            - name: 自定义角色
               href: roles-custom-overview.md
             - name: 创建自定义角色
               href: roles-create-custom.md
@@ -162,7 +167,7 @@
               href: /azure/active-directory/fundamentals/active-directory-users-assign-role-azure-portal?context=azure/active-directory/users-groups-roles/context/ugr-context
             - name: 使用 PowerShell 分配自定义角色
               href: roles-assign-powershell.md
-            - name: 自定义角色预览权限
+            - name: 自定义角色权限
               href: roles-custom-available-permissions.md
             - name: 委托应用管理权限
               href: roles-delegate-app-roles.md
@@ -177,7 +182,19 @@
             - name: 创建紧急帐户
               href: directory-emergency-access.md
         - name: 管理单元
-          href: directory-administrative-units.md
+          items:
+            - name: 管理单元概述
+              href: directory-administrative-units.md
+            - name: 添加和管理 AU
+              href: roles-admin-units-manage.md
+            - name: 在 AU 中添加和管理用户
+              href: roles-admin-units-add-manage-users.md
+            - name: 在 AU 中添加和管理组
+              href: roles-admin-units-add-manage-groups.md
+            - name: 分配 AU 范围的角色
+              href: roles-admin-units-assign-roles.md
+            - name: 常见问题解答和故障排除
+              href: roles-admin-units-faq-troubleshoot.md
     - name: 管理登录
       items:
         - name: 自定义公司品牌
