--- a/articles/kinect-dk/toc.yml
+++ b/articles/kinect-dk/toc.yml
@@ -27,7 +27,7 @@
       href: body-joints.md
     - name: 人体跟踪索引映射
       href: body-index-map.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 使用传感器 SDK
       items:
@@ -55,7 +55,7 @@
           href: get-body-tracking-results.md
         - name: 访问人体帧中的数据
           href: access-data-body-frame.md
-    - name: 将 Azure Kinect 库添加到项目
+    - name: 将 Azure Kinect 库添加到 VS 项目
       href: add-library-to-project.md
     - name: 更新 Azure Kinect 固件
       href: update-device-firmware.md
