commit translated contents

--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: hub-page
   ms.date: 03/24/2020
   ms.author: trbye
-  ms.openlocfilehash: 3535f1cb5f8901c0da629e7d2ef4f2a045d714f2
-  ms.sourcegitcommit: 5e49f45571aeb1232a3e0bd44725cc17c06d1452
+  ms.openlocfilehash: a833fc4c8c3115b3ec0d51787b62503f73e8c863
+  ms.sourcegitcommit: 31e9f369e5ff4dd4dda6cf05edf71046b33164d3
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/17/2020
-  ms.locfileid: "81604923"
+  ms.lasthandoff: 04/22/2020
+  ms.locfileid: "81757313"
 highlightedContent:
   items:
   - title: 什么是语音服务？
@@ -69,7 +69,7 @@ conceptualContent:
       text: 将语音翻译为文本
       url: quickstarts/translate-speech-to-text.md
     - itemType: quickstart
-      text: 将语音翻译为多种目标语言
+      text: 将语音翻译成多种语言
       url: quickstarts/translate-speech-to-text-multiple-languages.md
     - itemType: how-to-guide
       text: 语音翻译基础知识
@@ -204,5 +204,5 @@ additionalContent:
         url: support.md
       - text: GitHub 问题
         url: https://github.com/Azure-Samples/cognitive-services-speech-sdk/issues
-      - text: 堆栈溢出
+      - text: Stack Overflow
         url: https://aka.ms/SOspeechquestions
