--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -156,8 +156,6 @@
         - name: 添加描述符
           displayName: 'synonym, interchange, phrase list, descriptor'
           href: luis-how-to-add-features.md
-        - name: 迁移到 V3 创作
-          href: luis-migration-authoring-entities.md
         - name: 使用 REST API
           items:
             - name: 使用 Node.js 以编程方式构建应用
@@ -193,6 +191,8 @@
           displayName: 'import, export'
     - name: 发布
       href: luis-how-to-publish-app.md
+    - name: 查询预测运行时
+      href: luis-get-started-get-intent-from-browser.md
     - name: 管理应用
       items:
         - name: Azure 资源
@@ -216,11 +216,10 @@
       items:
         - name: 面向开发人员
           href: developer-reference-resource.md
-        - name: 创作 API
-          href: luis-migration-api-authoring.md
-        - name: 迁移到 V3 API
+        - name: 迁移到 V3 创作 API
+          href: luis-migration-authoring-entities.md
+        - name: 迁移到 V3 预测 API
           href: luis-migration-api-v3.md
-          displayName: 'json, response, verbose, dynamic, dynamic list object, brackets, array, role, show-all-intents,prebuilt domain, domain, external entities, "$instance",TimezoneOffset, datetimeReference, overridePredictions, override'
         - name: 迁移到 V2 API
           href: luis-migration-api-v1-to-v2.md
     - name: 使用容器
@@ -329,7 +328,7 @@
       href: luis-reference-regions.md
       displayName: 'failover, fail-over, fail over, Europe, EU, Australia, business continuity, bcdr'
     - name: 限制
-      href: luis-boundaries.md
+      href: luis-limits.md
     - name: 应用程序设置
       href: luis-reference-application-settings.md
     - name: 预构建的实体参考
@@ -412,7 +411,7 @@
       href: 'https://azure.microsoft.com/support/legal/cognitive-services-compliance-and-privacy/'
     - name: 加密
       href: luis-encryption-of-data-at-rest.md
-    - name: 堆栈溢出
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/LUIS'
     - name: UserVoice
       href: 'https://go.microsoft.com/fwlink/?linkid=2092090'
