--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -39,7 +39,7 @@
               href: sql-api-java-get-started.md
             - name: 异步 Java
               href: sql-api-async-java-get-started.md
-            - name: 异步 Java 端到端示例应用
+            - name: 使用更改源的异步 Java 示例
               href: create-sql-api-java-changefeed.md
             - name: Node.js
               href: sql-api-nodejs-get-started.md
@@ -112,7 +112,7 @@
           displayName: 'request units, RUs, RU'
           href: scaling-throughput.md
         - name: 冲突类型和解决策略
-          displayName: 'last write wins, custom'
+          displayName: 'last write wins, custom, multi master, multi-master'
           href: conflict-resolution-policies.md
         - name: 全球分布 - 揭秘
           href: global-dist-under-the-hood.md
@@ -599,6 +599,8 @@
               href: cassandra-import-data.md
         - name: 概念
           items:
+            - name: 常见问题解答
+              href: cassandra-faq.md
             - name: 弹性缩放
               href: manage-scale-cassandra.md
             - name: 辅助索引
@@ -608,7 +610,7 @@
             - name: 更改源
               href: cassandra-change-feed.md
             - name: 存储和管理 Spring Data
-              href: 'https://docs.microsoft.com/azure/java/spring-framework/configure-spring-data-apache-cassandra-with-cosmos-db?context=/azure/cosmos-db/context/context'
+              href: 'https://docs.microsoft.com/azure/developer/java/spring-framework/configure-spring-data-apache-cassandra-with-cosmos-db?context=/azure/cosmos-db/context/context'
             - name: Cassandra 和 Spark
               items:
                 - name: 简介
@@ -719,7 +721,7 @@
             - name: 管理数据索引编制
               href: mongodb-indexing.md
             - name: 存储和管理 Spring Data
-              href: 'https://docs.microsoft.com/azure/java/spring-framework/configure-spring-data-mongodb-with-cosmos-db?context=/azure/cosmos-db/context/context'
+              href: 'https://docs.microsoft.com/azure/developer/java/spring-framework/configure-spring-data-mongodb-with-cosmos-db?context=/azure/cosmos-db/context/context'
             - name: MongoDB 扩展命令
               href: mongodb-custom-commands.md
               displayName: custom commands
@@ -778,7 +780,7 @@
             - name: 将图数据可视化
               href: graph-visualization.md
             - name: 存储和管理 Spring Data
-              href: 'https://docs.microsoft.com/azure/java/spring-framework/configure-spring-data-gremlin-java-app-with-cosmos-db?context=/azure/cosmos-db/context/context'
+              href: 'https://docs.microsoft.com/azure/developer/java/spring-framework/configure-spring-data-gremlin-java-app-with-cosmos-db?context=/azure/cosmos-db/context/context'
             - name: 使用资源管理器模板进行管理
               href: manage-gremlin-with-resource-manager.md
               displayName: ARM
@@ -1092,9 +1094,9 @@
         - name: Azure 事件中心和 Azure 存储
           href: 'https://github.com/hdinsight/hdinsight-storm-examples/blob/master/IotExample/README.md'
         - name: 使用 Spring Boot Starter
-          href: 'https://docs.microsoft.com/azure/java/spring-framework/configure-spring-boot-starter-java-app-with-cosmos-db?context=/azure/cosmos-db/context/context'
+          href: 'https://docs.microsoft.com/azure/developer/java/spring-framework/configure-spring-boot-starter-java-app-with-cosmos-db?context=/azure/cosmos-db/context/context'
         - name: Spring Data 开发人员指南
-          href: 'https://docs.microsoft.com/azure/java/spring-framework/how-to-guides-spring-data-cosmosdb?context=/azure/cosmos-db/context/context'
+          href: 'https://docs.microsoft.com/azure/developer/java/spring-framework/how-to-guides-spring-data-cosmosdb?context=/azure/cosmos-db/context/context'
         - name: ODBC 驱动程序
           href: odbc-driver.md
     - name: 将数据迁移到 Cosmos DB
@@ -1178,8 +1180,8 @@
       href: 'https://azure.microsoft.com/try/cosmosdb/'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/cosmos-db/'
-    - name: 多主数据库权益
-      href: multi-master-benefits.md
+    - name: 性能级别
+      href: performance-levels.md
     - name: 用例
       items:
         - name: 常见用例
