--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -45,11 +45,15 @@
   items:
     - name: 存储帐户
       href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-    - name: Azure 存储静态加密
-      href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+    - name: 安全性
       items:
-        - name: 客户管理的密钥和 Azure Key Vault
-          href: ../common/encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: 安全基线
+          href: ../common/security-baseline.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+        - name: Azure 存储静态加密
+          href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+          items:
+            - name: 客户管理的密钥和 Azure Key Vault
+              href: ../common/encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: 数据冗余
       items:
         - name: 数据冗余
@@ -143,7 +147,7 @@
           href: 'https://docs.microsoft.com/previous-versions/azure/storage/storage-use-azcopy-linux'
     - name: 启动帐户故障转移
       href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 延迟问题
           href: ../common/troubleshoot-latency-storage-analytics-logs.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
