--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -294,10 +294,20 @@ groups:
     title: JavaScript
   - id: programming-language-python
     title: Python
+- id: programming-languages-set-eighteen
+  title: 编程语言
+  prompt: 选择编程语言
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-go
+    title: Go
 metadata:
-  ms.openlocfilehash: 158a1d9190612ca21ac898a93952bad75487f07e
-  ms.sourcegitcommit: 31e9f369e5ff4dd4dda6cf05edf71046b33164d3
+  ms.openlocfilehash: 5da5cf4aebfdaeec784e3cffe18e5b834b8dc26f
+  ms.sourcegitcommit: f7fb9e7867798f46c80fe052b5ee73b9151b0e0b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/22/2020
-  ms.locfileid: "81757039"
+  ms.lasthandoff: 04/24/2020
+  ms.locfileid: "82146842"
