--- a/articles/service-bus-messaging/TOC.yml
+++ b/articles/service-bus-messaging/TOC.yml
@@ -187,7 +187,7 @@
           href: service-bus-metrics-azure-monitor.md
         - name: 服务总线管理库
           href: service-bus-management-libraries.md
-        - name: 诊断日志
+        - name: 资源日志
           href: service-bus-diagnostic-logs.md
         - name: 暂停和重新激活消息传递实体
           href: entity-suspend.md
@@ -272,7 +272,7 @@
       href: 'https://github.com/paolosalvatori/ServiceBusExplorer'
     - name: 服务更新
       href: 'https://azure.microsoft.com/updates/?product=service-bus'
-    - name: 堆栈溢出
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azureservicebus'
     - name: 视频
       href: 'https://azure.microsoft.com/documentation/videos/index/?services=service-bus'
