--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -835,6 +835,9 @@
             - name: SQL VM
               tocHref: /azure/virtual-machines/windows/sql
               topicHref: /azure/virtual-machines/windows/sql
+    - name: 机密计算
+      tocHref: /azure/confidential-computing/
+      topicHref: /azure/confidential-computing/
     - name: Windows 虚拟桌面
       tocHref: /azure/virtual-desktop/
       topicHref: /azure/virtual-desktop/
