--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -60,6 +60,8 @@
           href: sql-support-matrix.md
         - name: SAP HANA 备份支持矩阵
           href: sap-hana-backup-support-matrix.md
+        - name: Azure 文件共享备份支持矩阵
+          href: azure-file-share-support-matrix.md
         - name: Azure Policy 支持的 VM SKU
           href: backup-azure-policy-supported-skus.md
     - name: 常见问题 (FAQ)
@@ -346,20 +348,22 @@
           href: backup-azure-security-feature.md
         - name: 内置安全控件
           href: backup-security-controls.md
+        - name: 安全基线
+          href: security-baseline.md
     - name: 疑难解答
       items:
         - name: Azure VM
           href: backup-azure-vms-troubleshoot.md
         - name: Azure 备份代理或 VM 扩展超时
           href: backup-azure-troubleshoot-vm-backup-fails-snapshot-timeout.md
+        - name: Azure 备份代理
+          href: backup-azure-mars-troubleshoot.md
         - name: 文件和文件夹备份速度慢
           href: backup-azure-troubleshoot-slow-backup-performance-issue.md
         - name: Azure 备份服务器
           href: backup-azure-mabs-troubleshoot.md
         - name: System Center DPM
           href: backup-azure-scdpm-troubleshooting.md
-        - name: Azure 备份代理
-          href: backup-azure-mars-troubleshoot.md
         - name: Azure 文件共享
           href: troubleshoot-azure-files.md
         - name: SQL Server
