commit translated contents

--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -126,6 +126,8 @@
       maintainContext: true
 - name: 操作指南
   items:
+    - name: 跨区域移动
+      href: move-across-regions.md
     - name: 使用 Blob 存储作为 Azure Stack Hub 上的检查点存储
       href: use-blob-storage-checkpoint-store-azure-stack-hub.md
     - name: 从 Azure Service Manager（经典）API 迁移到资源管理器 API
@@ -164,6 +166,10 @@
       items:
         - name: 针对事件中心的 Kafka 开发人员指南
           href: apache-kafka-developer-guide.md
+        - name: 针对事件中心的 Kafka 迁移指南
+          href: apache-kafka-migration-guide.md
+        - name: 针对事件中心的 Kafka 故障排除指南
+          href: apache-kafka-troubleshooting-guide.md
         - name: 在事件中心镜像 Kafka 代理
           href: event-hubs-kafka-mirror-maker-tutorial.md
         - name: 将 Apache Spark 连接到事件中心
@@ -174,6 +180,8 @@
           href: event-hubs-kafka-connect-tutorial.md
         - name: 将 Akka Streams 连接到事件中心
           href: event-hubs-kafka-akka-streams-tutorial.md
+        - name: 常见问题解答 - 用于 Kafka 的事件中心
+          href: apache-kafka-frequently-asked-questions.md
     - name: 管理和监视
       items:
         - name: 使用 Azure 监视来监视事件中心
