--- a/articles/active-directory/b2b/toc.yml
+++ b/articles/active-directory/b2b/toc.yml
@@ -17,7 +17,7 @@
       items:
         - name: 通过 PowerShell 批量邀请
           href: bulk-invite-powershell.md
-        - name: 通过门户批量邀请（预览版）
+        - name: 通过门户批量邀请
           href: tutorial-bulk-invite.md
         - name: 实施多重身份验证
           href: b2b-tutorial-require-mfa.md
