--- a/articles/site-reliability-engineering/index.yml
+++ b/articles/site-reliability-engineering/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: dnblankedelman
   ms.author: dnb
   ms.date: 02/18/2020
-  ms.openlocfilehash: a89b50cb23d87c9495b24e4ac2ae562b637ec6fa
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 18857c11887ef6934485602d0fcb7aaf2220721e
+  ms.sourcegitcommit: 849bb1729b89d075eed579aa36395bf4d29f3bd9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "77598929"
+  ms.lasthandoff: 04/28/2020
+  ms.locfileid: "82185075"
 highlightedContent:
   items:
   - title: SRE 简介：什么是 SRE？ (1/3)
@@ -55,6 +55,8 @@ productDirectory:
       text: 书籍
     - url: resources/events.md
       text: 事件
+    - url: articles/devops.md
+      text: 常见问题解答：SRE 和 DevOps
     - url: resources/links.md
       text: 链接和摘要
 conceptualContent:
