--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -40,7 +40,7 @@
               href: ./iot-edge-module.md
             - name: 咨询服务
               href: ./consulting-services.md
-            - name: Office 365、Dynamics 365 和 Power BI 发布指南
+            - name: Office 365、Dynamics 365 和 Power BI
               href: ./appsource-offer-publishing-guide.md
             - name: 使用 Azure Active Directory 启用 AppSource 和市场列表
               href: ./enable-appsource-marketplace-using-azure-ad.md
@@ -559,6 +559,8 @@
       href: ./partner-center-portal/publishing-status.md
     - name: 更新现有产品/服务
       href: ./partner-center-portal/update-existing-offer.md
+    - name: 激活权益
+      href: ./partner-center-portal/marketplace-rewards.md
     - name: 支持选项
       href: ./partner-center-portal/support.md
     - name: 合作伙伴中心分析
