--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -28,10 +28,14 @@
       href: spring-cloud-tutorial-alerts-action-groups.md
     - name: 将应用程序绑定到 Azure CosmosDB
       href: spring-cloud-tutorial-bind-cosmos.md
-    - name: 将应用程序与 Azure Redis 缓存绑定
+    - name: 将应用程序与 Azure Cache for Redis 缓存绑定
       href: spring-cloud-tutorial-bind-redis.md
     - name: 将应用程序绑定到 Azure MySQL
       href: spring-cloud-tutorial-bind-mysql.md
+    - name: 将自定义 DNS 名称映射到 Azure Spring Cloud
+      href: spring-cloud-tutorial-custom-domain.md
+    - name: 使用 IntelliJ 部署 Azure Spring Cloud 应用程序
+      href: spring-cloud-tutorial-intellij-deploy-apps.md
 - name: 概念
   items:
     - name: 了解 Azure Spring Cloud 配额和限制
@@ -56,6 +60,9 @@
       href: spring-cloud-howto-log-streaming.md
     - name: 在 Azure Spring Cloud 中使用永久性存储
       href: spring-cloud-howto-persistent-storage.md
+    - name: DevOps 部署到 Azure Spring Cloud
+    - name: 将 Azure Spring Cloud 与 Azure 负载均衡解决方案集成
+      href: spring-cloud-howto-integrate-azure-load-balancers.md
 - name: DevOps 部署到 Azure Spring Cloud
   items:
     - name: 使用 Azure DevOps 进行 CI/CD
